# CMake-GLFW-OPENGL-Test

lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/glad/: glad.c
src/: CMakeLists.txt  main.cpp
